bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:2: error: ')' expected but integer literal found.
  if(temp 1 < 0 &&  temp 2 > 100) {
          ^IcyHot:11: error: illegal start of simple expression
} 
^