bat.bool1.icyhot.IcyHot.scala.code
def icyHot(temp1:Int, temp2: Int): Boolean = {
  if(temp 1 < 0 &&  temp 2 > 100) {
    return true
  }
  else if (temp 1 > 0 &&  temp 2 < 100) {
    return true
  }
  else {
    return false
  }
}